<resources>
    <string name="app_name">APP FIC</string>
    <string name="et_nombre_usuario">Nombre de usuario</string>
    <string name="et_contrasenia">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="tv_registrar">Registrarse</string>
    <string name="tv_olvidar_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="et_nombre_alumno">Nombre alumno</string>
    <string name="et_apellido_paterno_alumno">Apellido paterno</string>
    <string name="et_apellido_materno_alumno">Apellido materno</string>
    <string name="ha_texto">Home Activity</string>
    <string name="btn_home_activity_sitio_web">Visualizar sitio web</string>
    <string name="btn_home_activity_marcar_numero">Marcar número</string>
    <string name="sv_noticia">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
</resources>