<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo_fic" />

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/imgLogo"
        android:inputType="textPersonName"
        android:hint="@string/et_nombre_usuario"
         />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/etNombreUsuario"
        android:hint="@string/et_contrasenia" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContrasenia"
        android:backgroundTint="@color/color_fic"
        android:text="@string/btn_iniciar_sesion" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_margin="@dimen/et_margen"
        android:text="@string/tv_registrar" />

    <TextView
        android:id="@+id/tvOlvidaContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_margin="@dimen/et_margen"
        android:layout_alignParentRight="true"
        android:text="@string/tv_olvidar_contrasenia" />
</RelativeLayout>