<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        app:srcCompat="@drawable/logo_fic" />

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombre_usuario"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/et_margen_icono"
        android:drawableTint="@color/color_fic"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_contrasenia"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/et_margen_icono"
        android:drawableTint="@color/color_fic"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_fic"
        android:text="@string/btn_iniciar_sesion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_personalizado"
            android:text="@string/tv_registrar" />

        <TextView
            android:id="@+id/tvOlvidaContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_olvidar_contrasenia" />
    </LinearLayout>

</LinearLayout>